@@ -18,7 +18,6 @@
 #define NEAR
 #endif
 
-
 typedef struct _profile_t *profile_t;
 
 #if !defined(PROTOTYPE)
@@ -28,6 +27,13 @@ typedef struct _profile_t *profile_t;
 #define PROTOTYPE(x) ()
 #endif
 #endif
+
+/*
+ * Used by the profile iterator in prof_get.c
+ */
+#define PROFILE_ITER_LIST_SECTION	0x0001
+#define PROFILE_ITER_SECTIONS_ONLY	0x0002
+#define PROFILE_ITER_RELATIONS_ONLY	0x0004
 
 long profile_init
 	PROTOTYPE ((const char **filenames, profile_t *ret_profile));
@@ -58,5 +64,16 @@ long profile_get_relation_names
 
 long profile_get_subsection_names
 	PROTOTYPE((profile_t profile, const char **names, char ***ret_names));
+
+long profile_iterator_create
+	PROTOTYPE((profile_t profile, const char **names,
+		   int flags, void **ret_iter));
+
+void profile_iterator_free PROTOTYPE((void **iter_p));
+	
+long profile_iterator
+	PROTOTYPE((void	**iter_p, char **ret_name, char **ret_value));
+
+void profile_release_string PROTOTYPE((char *str));
 
 #endif /* _KRB5_PROFILE_H */
